day 4: media queries

--- a/meidaQ.html
+++ b/meidaQ.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/reset.css">
-  <link rel="stylesheet" href="./assets/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets/css/mediaQ.css">
 </head>
 <body>
   <!-- navbar -->
@@ -21,12 +21,17 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="./weekOne.html">Week 1</a>
-        <a class="nav-link" href="./bootstrap.html">Bootstrap</a>
+        <a class="nav-link" href="./meidaQ.html">Media Queries</a>
       </div>
     </div>
   </nav>
 
-
+  <!-- media queries -->
+  <div class="myDiv"></div>
+ <img class="mountains" src="https://images.unsplash.com/photo-1582702877108-546b84049d77?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="mountains at sunset">
+<div class="container">
+  
+</div>
   <!-- footers -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
