--- a/weekOne.html
+++ b/weekOne.html
@@ -15,7 +15,7 @@
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">100 Days of Code</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,15 +24,14 @@
         <div class="navbar-nav">
           <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
           <a class="nav-link" href="./weekOne.html">Week 1</a>
-          <a class="nav-link" href="./bootstrap.html">Bootstrap</a>
+          <a class="nav-link" href="./meidaQ.html">Media Queries</a>
         </div>
       </div>
     </nav>
 
   <h1>Hello World</h1>
 
-  <p class="textColor">Week 1 taught basic principles to GitHub, HTML and CSS. Including the inaugural 'hello world'
-    webpage. </p>
+  <p class="textColor">Week 1 taught basic principles to GitHub, HTML and CSS. Including the inaugural 'hello world'. In an effort to learn the basic HTML functionality, CSS styling looks primitive (ala '90's myspace blog!')  </p>
   <p class="textColor adjustMargins">Principle Concepts Learned</p>
   <ul>
     <li class="textColor"> HTML boiler plate</li>
@@ -40,7 +39,7 @@
     <li class="textColor"> HTML attributes (type, name, id, class, etc)</li>
     <li class="textColor"> Semantic Elements (header, nav, aside section, footer, etc)</li>
     <li class="textColor"> Clickable Links:
-      <a href="./bootstrap.html">view Bootstrap Practice</a></li>
+      <a href="./index.html">view Bootstrap Practice</a></li>
     <li class="textColor"> Linking Style Sheets</li>
     <li class="textColor">Basic CSS styling techniques</li>
     <li class="textColor"> Styling Library (see above) </li>
