day 6 & 7: bootstrap formatting

--- a/index.html
+++ b/index.html
@@ -28,53 +28,30 @@
 
   <!-- body -->
   <div class="container-fluid">
-    <!-- <div class="row-md"> -->
-      <div class="card">
-        <div class="card-body">
-          <div class="media">
-            <img src="./assets/Images/5 -about-me.jpg" class="photo mr-3 rounded-circle pull-left" alt="image of web developer">
-            <div class="media-body">
-              <p>Like many people, Covid brought my industry to a halt. The extra time allowed me dig into problems I’ve experienced in freelance styling - like the gap between independent fashion brand’s creative vision and access to tech functionality.
-              <br>
-              <br>
-              After considering the multiple solutions, I enrolled in the University of Irvine’s 12-week Web Development bootcamp. The program allowed me to acquire skills in full stack web development to communicate a brand’s story. Being out of formal education for several years, committing to coding first meant re-learning classroom style learning. Twelve grueling weeks later, I am a proud coding bootcamp graduate.
-              <br>
-              <br>
-              In order to maintain and increase my skill level, August 10th, I made the decision to join the #100DaysOfCode challenge. The challenge asks participants to commit to at least 1 hour each day of coding for 100 days. 
-              <br>
-              <br>
-              I will begin by reviewing what I learned in boot camp to further solidify my foundation. Following that, I will educate myself on platforms relevant to the fashion industry (like Shopify, Amazon, Google Analytics, SEO, and Squarespace, to name a few)
-              <br>
-              <br>
-              For daily briefings please follow me on twitter (<a href="https://twitter.com/erikapaigestyle">@erikapaigestyle</a>), as the challenge requests that participants tweet their progress everyday. To view my projects and code please visit my GitHub profile: <a href="https://github.com/erikapaige">erikapaige</a>. My code will be pushed up daily so that anyone can view my progress.
-            </div>
+    <div class="row">
+      <div class="col mt-4 mb-4 mb-md-0">
+        <img src="./assets/Images/5 -about-me.jpg" class="photo mr-3 rounded-circle img-responsive mx-auto d-block" alt="image of web developer">
+      </div>
+      <div class="col mt-md-4">
+        <div class="card">
+          <div class="card-body">
+            <p>Like many people, Covid brought my industry to a halt. The extra time allowed me dig into problems I’ve experienced in freelance styling - like the gap between independent fashion brand’s creative vision and access to tech functionality.
+            <br>
+            <br>
+            After considering the multiple solutions, I enrolled in the University of Irvine’s 12-week Web Development bootcamp. The program allowed me to acquire skills in full stack web development to communicate a brand’s story. Being out of formal education for several years, committing to coding first meant re-learning classroom style learning. Twelve grueling weeks later, I am a proud coding bootcamp graduate.
+            <br>
+            <br>
+            In order to maintain and increase my skill level, August 10th, I made the decision to join the #100DaysOfCode challenge. The challenge asks participants to commit to at least 1 hour each day of coding for 100 days. 
+            <br>
+            <br>
+            I will begin by reviewing what I learned in boot camp to further solidify my foundation. Following that, I will educate myself on platforms relevant to the fashion industry (like Shopify, Amazon, Google Analytics, SEO, and Squarespace, to name a few)
+            <br>
+            <br>
+            For daily briefings please follow me on twitter (<a href="https://twitter.com/erikapaigestyle">@erikapaigestyle</a>), as the challenge requests that participants tweet their progress everyday. To view my projects and code please visit my GitHub profile: <a href="https://github.com/erikapaige">erikapaige</a>. My code will be pushed up daily so that anyone can view my progress.
           </div>
         </div>
       </div>
-    <!-- </div> -->
-  </div>
-  <!-- <div class="card">
-    <div class="card-body">
-      <div class="media">
-        <img src="./assets/Images/5 -about-me.jpg" class="photo mr-3 rounded-circle pull-left" alt="image of web developer">
-        <div class="media-body">
-          <p>Like many people, Covid brought my industry to a halt. The extra time allowed me dig into problems I’ve experienced in freelance styling - like the gap between independent fashion brand’s creative vision and access to tech functionality.
-          <br>
-          <br>
-          After considering the multiple solutions, I enrolled in the University of Irvine’s 12-week Web Development bootcamp. The program allowed me to acquire skills in full stack web development to communicate a brand’s story. Being out of formal education for several years, committing to coding first meant re-learning classroom style learning. Twelve grueling weeks later, I am a proud coding bootcamp graduate.
-          <br>
-          <br>
-          In order to maintain and increase my skill level, August 10th, I made the decision to join the #100DaysOfCode challenge. The challenge asks participants to commit to at least 1 hour each day of coding for 100 days. 
-          <br>
-          <br>
-          I will begin by reviewing what I learned in boot camp to further solidify my foundation. Following that, I will educate myself on platforms relevant to the fashion industry (like Shopify, Amazon, Google Analytics, SEO, and Squarespace, to name a few)
-          <br>
-          <br>
-          For daily briefings please follow me on twitter (<a href="https://twitter.com/erikapaigestyle">@erikapaigestyle</a>), as the challenge requests that participants tweet their progress everyday. To view my projects and code please visit my GitHub profile: <a href="https://github.com/erikapaige">erikapaige</a>. My code will be pushed up daily so that anyone can view my progress.
-        </div>
-      </div>
     </div>
-  </div> -->
 
   <!-- footers -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
