Day 11 & 12: updated Bootstrap styling W3 Newbie

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://kit.fontawesome.com/bc8806cb40.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <!-- navbar -->
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">100 Days of Code</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -33,11 +33,43 @@
   </nav>
   
   <!-- Main Page Heading -->
-
   <div class="col-12 text-center mt-5">
     <h1 class="text-dark pt-4">100 Days of Code</h1>
     <div class="border-top border-primary w-25 mx-auto my3"></div>
   </div>
+  <!-- End Main Page Heading -->
+
+  <!-- Two Column Section -->
+  <div class="container my-5">
+    <div class="row py-4">
+
+      <div class="col-lg-8 mb-8 my-lg auto">
+        <p class="mb-8">
+          <br>
+          After graduating from University of Irvine's Web Development Bootcamp; I knew I wanted to further develop my coding skills. In order to maintain and increase my skill level, on August 10th I made the decision to join the #100DaysOfCode challenge.
+          The challenge asks participants to commit to at least 1 hour each day of coding for 100 days. 
+          <br>
+          <br>
+          I will begin by reviewing what I learned in boot camp to further solidify my foundation. Following that, I will educate
+          myself on platforms relevant to the fashion industry (like Shopify, Amazon, Google Analytics, SEO, and Squarespace, to
+          name a few)
+          <br>
+          <br>
+          For daily briefings please follow me on twitter (<a href="https://twitter.com/erikapaigestyle">@erikapaigestyle</a>), as
+          the challenge requests that participants tweet their progress everyday. To view my projects and code please visit my
+          GitHub profile: <a href="https://github.com/erikapaige">erikapaige</a>. My code will be pushed up daily so that anyone
+          can view my progress.
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <img src="./assets/Images/5 -about-me.jpg" alt="photo of the developer" class="w-100 photo mr-3 rounded-circle">
+      </div>
+      
+    </div>
+  </div>
+  <!-- End two Column Section -->
+
+  <!-- Bootstrap Before Learning with W3Newbie -->
   <div class="container-fluid">
     <div class="row">
       <div class="col mt-4 mb-4 mb-md-0">
