Day 13: toggle bar

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
   <!-- Two Column Section -->
   <div class="container my-5">
-    <div class="row py-4">
+    <div class="row py-2">
 
       <div class="col-lg-8 mb-8 my-lg auto">
-        <p class="mb-8">
+        <p class="mb-3">
           <br>
           After graduating from University of Irvine's Web Development Bootcamp; I knew I wanted to further develop my coding skills. In order to maintain and increase my skill level, on August 10th I made the decision to join the #100DaysOfCode challenge.
           The challenge asks participants to commit to at least 1 hour each day of coding for 100 days. 
@@ -69,8 +69,61 @@
   </div>
   <!-- End two Column Section -->
 
+  <!-- Toggle Navbar -->
+  <a href="#oldCode" class="navbar bg-primary sticky-top old" role="button" data-toggle="collapse">
+    <p>View Format before W3Newbie video
+    </p>
+  </a>
+
+  <div class="collapse" id="oldCode">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col mt-4 mb-4 mb-md-0">
+          <img src="./assets/Images/5 -about-me.jpg" class="photo mr-3 rounded-circle img-responsive mx-auto d-block"
+            alt="image of web developer">
+        </div>
+        <div class="col mt-md-4">
+          <div class="card">
+            <div class="card-body">
+              <p>Like many people, Covid brought my industry to a halt. The extra time allowed me dig into problems I’ve
+                experienced in freelance styling - like the gap between independent fashion brand’s creative vision and
+                access to tech functionality.
+                <br>
+                <br>
+                After considering the multiple solutions, I enrolled in the University of Irvine’s 12-week Web Development
+                bootcamp. The program allowed me to acquire skills in full stack web development to communicate a brand’s
+                story. Being out of formal education for several years, committing to coding first meant re-learning
+                classroom style learning. Twelve grueling weeks later, I am a proud coding bootcamp graduate.
+                <br>
+                <br>
+                In order to maintain and increase my skill level, August 10th, I made the decision to join the
+                #100DaysOfCode challenge. The challenge asks participants to commit to at least 1 hour each day of coding
+                for 100 days. 
+                <br>
+                <br>
+                I will begin by reviewing what I learned in boot camp to further solidify my foundation. Following that, I
+                will educate myself on platforms relevant to the fashion industry (like Shopify, Amazon, Google Analytics,
+                SEO, and Squarespace, to name a few)
+                <br>
+                <br>
+                For daily briefings please follow me on twitter (<a
+                  href="https://twitter.com/erikapaigestyle">@erikapaigestyle</a>), as the challenge requests that
+                participants tweet their progress everyday. To view my projects and code please visit my GitHub profile: <a
+                  href="https://github.com/erikapaige">erikapaige</a>. My code will be pushed up daily so that anyone can
+                view my progress.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+  <!-- End Of Toggle Navbar -->
+
   <!-- Bootstrap Before Learning with W3Newbie -->
-  <div class="container-fluid">
+  <!-- <div class="container-fluid">
     <div class="row">
       <div class="col mt-4 mb-4 mb-md-0">
         <img src="./assets/Images/5 -about-me.jpg" class="photo mr-3 rounded-circle img-responsive mx-auto d-block" alt="image of web developer">
@@ -94,7 +147,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   <!-- Footers / Script Source Files -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
