--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <!-- Style CSS -->
-  <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/index.css">
   <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
@@ -16,7 +15,7 @@
   <script src="https://kit.fontawesome.com/bc8806cb40.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <!-- Navbar -->
+  <!-- Start Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">100 Days of Code</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -31,16 +30,17 @@
       </div>
     </div>
   </nav>
+  <!-- End Navbar -->
   
-  <!-- Main Page Heading -->
+  <!-- Start Main Page Heading -->
   <div class="col-12 text-center mt-5">
-    <h1 class="text-dark pt-4">100 Days of Code</h1>
-    <div class="border-top border-primary w-25 mx-auto my3"></div>
+    <h1 class="pt-4 pb-3">100 Days of Code</h1>
+    <div class="border-top border-primary w-25 mx-auto"></div>
   </div>
   <!-- End Main Page Heading -->
 
-  <!-- Two Column Section -->
-  <div class="container my-5">
+  <!-- Start Two Column Section -->
+  <div class="container mb-5 mt-2">
     <div class="row py-2">
 
       <div class="col-lg-8 mb-8 my-lg auto">
@@ -69,12 +69,10 @@
   </div>
   <!-- End two Column Section -->
 
-  <!-- Toggle Navbar -->
-  <a href="#oldCode" class="navbar bg-primary sticky-top old" role="button" data-toggle="collapse">
-    <p>View Format before W3Newbie video
-    </p>
+  <!-- Start Toggle Navbar -->
+  <a href="#oldCode" class="navbar bg-primary sticky-top mx-auto w-100 justify-content-center old" role="button" data-toggle="collapse">
+    <p class="mb-0">View Format before W3Newbie</p>
   </a>
-
   <div class="collapse" id="oldCode">
     <div class="container-fluid">
       <div class="row">
@@ -85,71 +83,75 @@
         <div class="col mt-md-4">
           <div class="card">
             <div class="card-body">
-              <p>Like many people, Covid brought my industry to a halt. The extra time allowed me dig into problems I’ve
-                experienced in freelance styling - like the gap between independent fashion brand’s creative vision and
-                access to tech functionality.
-                <br>
-                <br>
-                After considering the multiple solutions, I enrolled in the University of Irvine’s 12-week Web Development
-                bootcamp. The program allowed me to acquire skills in full stack web development to communicate a brand’s
-                story. Being out of formal education for several years, committing to coding first meant re-learning
-                classroom style learning. Twelve grueling weeks later, I am a proud coding bootcamp graduate.
-                <br>
-                <br>
-                In order to maintain and increase my skill level, August 10th, I made the decision to join the
-                #100DaysOfCode challenge. The challenge asks participants to commit to at least 1 hour each day of coding
-                for 100 days. 
-                <br>
-                <br>
-                I will begin by reviewing what I learned in boot camp to further solidify my foundation. Following that, I
-                will educate myself on platforms relevant to the fashion industry (like Shopify, Amazon, Google Analytics,
-                SEO, and Squarespace, to name a few)
-                <br>
-                <br>
-                For daily briefings please follow me on twitter (<a
-                  href="https://twitter.com/erikapaigestyle">@erikapaigestyle</a>), as the challenge requests that
-                participants tweet their progress everyday. To view my projects and code please visit my GitHub profile: <a
-                  href="https://github.com/erikapaige">erikapaige</a>. My code will be pushed up daily so that anyone can
-                view my progress.
+              <p>Like many people, Covid brought my industry to a halt. The extra time allowed me dig into problems I’ve experienced in freelance styling - like the gap between independent fashion brand’s creative vision and access to tech functionality.
+              <br>
+              <br>
+              After considering the multiple solutions, I enrolled in the University of Irvine’s 12-week Web Development bootcamp. The program allowed me to acquire skills in full stack web development to communicate a brand’s story. Being out of formal education for several years, committing to coding first meant re-learning classroom style learning. Twelve grueling weeks later, I am a proud coding bootcamp graduate.
+              <br>
+              <br>
+              In order to maintain and increase my skill level, August 10th, I made the decision to join the #100DaysOfCode challenge. The challenge asks participants to commit to at least 1 hour each day of coding for 100 days. 
+              <br>
+              <br>
+              I will begin by reviewing what I learned in boot camp to further solidify my foundation. Following that, I will educate myself on platforms relevant to the fashion industry (like Shopify, Amazon, Google Analytics, SEO, and Squarespace, to name a few)
+              <br>
+              <br>
+              For daily briefings please follow me on twitter (<a href="https://twitter.com/erikapaigestyle">@erikapaigestyle</a>), as the challenge requests that participants tweet their progress everyday. To view my projects and code please visit my GitHub profile: <a href="https://github.com/erikapaige">erikapaige</a>. My code will be pushed up daily so that anyone can view my progress.
             </div>
           </div>
         </div>
       </div>
     </div>
-
-
-
-
+  </div>
   <!-- End Of Toggle Navbar -->
 
-  <!-- Bootstrap Before Learning with W3Newbie -->
-  <!-- <div class="container-fluid">
-    <div class="row">
-      <div class="col mt-4 mb-4 mb-md-0">
-        <img src="./assets/Images/5 -about-me.jpg" class="photo mr-3 rounded-circle img-responsive mx-auto d-block" alt="image of web developer">
+  <!-- Start Footer -->
+  <footer>
+    <div class="container">
+      
+      <div class="row text-light text-center py-4 justify-content-center">
+        <div class="col-sm-10 col-md-8 col-lg-6">
+          <ul class="social pt-3">
+            <li>
+              <a href="https://github.com/erikapaige" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/erikapaige/" target="_blank">
+              <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/erikapaigestyle" target="_blank">
+              <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/erikapaigestyle/" target="_blank">
+              <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+          </ul>
+        </div>  
       </div>
-      <div class="col mt-md-4">
-        <div class="card">
-          <div class="card-body">
-            <p>Like many people, Covid brought my industry to a halt. The extra time allowed me dig into problems I’ve experienced in freelance styling - like the gap between independent fashion brand’s creative vision and access to tech functionality.
-            <br>
-            <br>
-            After considering the multiple solutions, I enrolled in the University of Irvine’s 12-week Web Development bootcamp. The program allowed me to acquire skills in full stack web development to communicate a brand’s story. Being out of formal education for several years, committing to coding first meant re-learning classroom style learning. Twelve grueling weeks later, I am a proud coding bootcamp graduate.
-            <br>
-            <br>
-            In order to maintain and increase my skill level, August 10th, I made the decision to join the #100DaysOfCode challenge. The challenge asks participants to commit to at least 1 hour each day of coding for 100 days. 
-            <br>
-            <br>
-            I will begin by reviewing what I learned in boot camp to further solidify my foundation. Following that, I will educate myself on platforms relevant to the fashion industry (like Shopify, Amazon, Google Analytics, SEO, and Squarespace, to name a few)
-            <br>
-            <br>
-            For daily briefings please follow me on twitter (<a href="https://twitter.com/erikapaigestyle">@erikapaigestyle</a>), as the challenge requests that participants tweet their progress everyday. To view my projects and code please visit my GitHub profile: <a href="https://github.com/erikapaige">erikapaige</a>. My code will be pushed up daily so that anyone can view my progress.
-          </div>
+
+      <div class="row text-light text-center justify-content-center">
+        <div class="col-sm-10 col-md-8 col-lg-6">
+          <p>&copy; <a href="#" target="_blank">www.portfolio.com</a></p>
         </div>
       </div>
-    </div> -->
 
-  <!-- Footers / Script Source Files -->
+    </div>
+  </footer>
+  <!-- End Footer -->
+
+  <!-- Start Socket -->
+  <!-- <div class="socket text-light text-center py-3">
+      <p>&copy; <a href="#" target="_blank">Portfolio.com</a></p>
+  </div> -->
+  <!-- End Socket -->
+  
+  <!-- Start Footer Script Source Files -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
