day 17: Small coding tweaks (target="_blank")

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           name a few)
           <br>
           <br>
-          For daily briefings please follow me on twitter (<a href="https://twitter.com/erikapaigestyle">@erikapaigestyle</a>), as
+          For daily briefings please follow me on twitter (<a href="https://twitter.com/erikapaigestyle" target="_blank">@erikapaigestyle</a>), as
           the challenge requests that participants tweet their progress everyday. To view my projects and code please visit my
-          GitHub profile: <a href="https://github.com/erikapaige">erikapaige</a>. My code will be pushed up daily so that anyone
+          GitHub profile: <a href="https://github.com/erikapaige" target="_blank">erikapaige</a>. My code will be pushed up daily so that anyone
           can view my progress.
         </p>
       </div>
@@ -71,7 +71,7 @@
 
   <!-- Start Toggle Navbar -->
   <a href="#oldCode" class="navbar bg-primary sticky-top mx-auto w-100 justify-content-center old" role="button" data-toggle="collapse">
-    <p class="mb-0">View Format before W3Newbie</p>
+    <p class="mb-0">View Format Prior to Bootstrap Lessons</p>
   </a>
   <div class="collapse" id="oldCode">
     <div class="container-fluid">
@@ -105,7 +105,7 @@
   <!-- End Of Toggle Navbar -->
 
   <!-- Start Footer -->
-  <footer>
+  <footer class="mb-0">
     <div class="container">
       
       <div class="row text-light text-center py-4 justify-content-center">
@@ -145,11 +145,6 @@
   </footer>
   <!-- End Footer -->
 
-  <!-- Start Socket -->
-  <!-- <div class="socket text-light text-center py-3">
-      <p>&copy; <a href="#" target="_blank">Portfolio.com</a></p>
-  </div> -->
-  <!-- End Socket -->
   
   <!-- Start Footer Script Source Files -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
