--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 <body>
   <!-- Start Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">100 Days of Code</a>
+    <a class="navbar-brand" href="./index.html">100 Days of Code</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="./weekOne.html">Week 1</a>
         <a class="nav-link" href="./meidaQ.html">Media Queries</a>
+        <a class="nav-link" href="./javascript.html">Javascript</a>
       </div>
     </div>
   </nav>
@@ -105,7 +105,7 @@
   <!-- End Of Toggle Navbar -->
 
   <!-- Start Footer -->
-  <footer class="mb-0">
+  <footer class="mb-0 fixed-bottom">
     <div class="container">
       
       <div class="row text-light text-center py-4 justify-content-center">
