--- a/meidaQ.html
+++ b/meidaQ.html
@@ -12,26 +12,27 @@
 <body>
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">100 Days of Code</a>
+    <a class="navbar-brand" href="./index.html">100 Days of Code</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="./weekOne.html">Week 1</a>
         <a class="nav-link" href="./meidaQ.html">Media Queries</a>
+        <a class="nav-link" href="./javascript.html">Javascript</a>
       </div>
     </div>
   </nav>
 
   <!-- media queries -->
   <div class="myDiv"></div>
- <img class="mountains" src="https://images.unsplash.com/photo-1582702877108-546b84049d77?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="mountains at sunset">
-<div class="container">
   
-</div>
+  <img class="mountains" src="https://images.unsplash.com/photo-1582702877108-546b84049d77?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="mountains at sunset">
+  
+  <div class="container"></div>
+
   <!-- footers -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
