--- a/weekOne.html
+++ b/weekOne.html
@@ -15,16 +15,16 @@
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">100 Days of Code</a>
+      <a class="navbar-brand" href="./index.html">100 Days of Code</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
           <a class="nav-link" href="./weekOne.html">Week 1</a>
           <a class="nav-link" href="./meidaQ.html">Media Queries</a>
+          <a class="nav-link" href="./javascript.html">Javascript</a>
         </div>
       </div>
     </nav>
@@ -83,13 +83,16 @@
   <p class="textColor">Example of setting a background image to a 'Div'</p>
   <div class="divImg"></div>
 
-  <!-- footers -->
+  
+  <!-- Start Footer Script Source Files -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <!-- Font Awesome -->
+  <script src="js/all.min.js"></script>
 </body>
 
 </html>
