Day 17: updated footer on index.html

--- a/javascript.html
+++ b/javascript.html
@@ -32,8 +32,7 @@
   </nav>
   <!-- End Navbar -->
 
-
-
+  
 
 
   <!-- Start Footer -->
@@ -76,6 +75,12 @@
     </div>
   </footer>
   <!-- End Footer -->
+
+  <!-- Start Javascript Code -->
+  <script>
+    
+  </script>
+  <!-- End Javascript Code -->
 
   <!-- Start Footer Script Source Files -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
