--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Style CSS -->
   <link rel="stylesheet" href="./assets/css/index.css">
   <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
   <!-- Font Awesome (used for icons)-->
   <script src="https://kit.fontawesome.com/bc8806cb40.js" crossorigin="anonymous"></script>
 </head>
@@ -104,8 +104,9 @@
   </div>
   <!-- End Of Toggle Navbar -->
 
+
   <!-- Start Footer -->
-  <footer class="mb-0 fixed-bottom">
+  <footer class="mb-0">
     <div class="container">
       
       <div class="row text-light text-center py-4 justify-content-center">
