--- a/javascript.html
+++ b/javascript.html
@@ -32,8 +32,24 @@
   </nav>
   <!-- End Navbar -->
 
-  
+  <!-- Javascript Code Quiz -->
+  <div class="container">
 
+    <div class="row py-4">
+      <div class="col-lg-6 my-lg-auto justify-content-center">
+        <button class="toggler">
+          Answer 1
+        </button>
+      </div>
+      <div class="col-lg-6 my-lg-auto justify-content-center">
+        <button class="toggler">
+          Answer 2
+        </button>
+      </div>
+    </div>
+
+  </div>
+  <!-- End Javascript Code Quiz -->
 
   <!-- Start Footer -->
   <footer class="mb-0 fixed-bottom">
