Day 20 & 21: code quiz mobile responsive

--- a/javascript.html
+++ b/javascript.html
@@ -7,8 +7,9 @@
   <!-- Bootstrap 4.5 CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <!-- Style CSS -->
+  <!-- CSS Stylesheets-->
   <link rel="stylesheet" href="./assets/css/index.css">
+  <link rel="stylesheet" href="./assets/css/javascript.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
   <!-- Font Awesome (used for icons)-->
@@ -34,18 +35,27 @@
 
   <!-- Javascript Code Quiz -->
   <div class="container">
+    
+    <div class="row justify-content-center mt-5">
+      <p>This is the javascript question</p>
+    </div>
 
-    <div class="row py-4">
-      <div class="col-lg-6 my-lg-auto justify-content-center">
-        <button class="toggler">
-          Answer 1
-        </button>
-      </div>
-      <div class="col-lg-6 my-lg-auto justify-content-center">
-        <button class="toggler">
-          Answer 2
-        </button>
-      </div>
+    <div class="row justify-content-center">
+      <button class="col-sm mr-2 mb-2 btn btn-primary active" type="button" data-toggle="button" aria-pressed="false">
+        Answer 1
+      </button>
+      <button class="col-sm mr-2 mb-2 btn btn-primary active" type="button" data-toggle="button" aria-pressed="false">
+        Answer 2
+      </button>
+    </div>
+
+    <div class="row justify-content-center">
+      <button class="col-sm mr-2 mb-2 btn btn-primary active" type="button" data-toggle="button" aria-pressed="false">
+        Answer 3
+      </button>
+      <button class="col-sm mr-2 mb-2 btn btn-primary active" type="button" data-toggle="button" aria-pressed="false">
+        Answer 4
+      </button>
     </div>
 
   </div>
