Day 22: To Do List, add item function

--- a/javascriptToDo.html
+++ b/javascriptToDo.html
@@ -10,8 +10,8 @@
   <!-- Input -->
   <form>
     <p>
-      <label for="name"></label>
-      <input type="name" name="name" id="name">
+      <label for="item"></label>
+      <input type="text" name="item" id="item">
     </p>
     <p>
       <button id="addItem">Add Item</button>
@@ -28,11 +28,11 @@
     const items = [
       {
         text: 'wash dishes',
-        isDone: true,
+        isDone: false,
       },
       {
         text: 'make the bed',
-        isDone: true,
+        isDone: false,
       },
       {
         text: 'grocery shop',
@@ -44,13 +44,15 @@
       },
       {
         text: 'walk the dog',
-        isDone: true,
+        isDone: false,
       },
     ]
 
     // view items
       // function that renders items
       const renderItems = () => {
+        // grab list and remove everything then  re-render
+        document.getElementById('items').innerHTML = ''
         for(let i =0; i < items.length; i++){
           console.log(items[i])
 
@@ -61,14 +63,35 @@
           // put items into items ul list
           document.getElementById('items').append(itemElem)
         }
+
       }
-    // add an item to the list
+
+    // add an item function
+    const addItem =  () => {
+      // create custom object and push to new array
+      items.push({
+        text: document.getElementById('item').value,
+        isDone: false
+      })
+      renderItems()
+      text: document.getElementById('item').value = ''
+    }
+    
+    document.getElementById('addItem').addEventListener('click', (event) =>{
+      event.preventDefault()
+      // console.log('ping')
+
+      // call addItem function
+      addItem()
+    })
+
+    renderItems()
 
     // mark an item as complete or incomplete
 
     // remove an item from the list
 
-      renderItems()
+  
 
     
 
