--- a/meidaQ.html
+++ b/meidaQ.html
@@ -21,7 +21,8 @@
       <div class="navbar-nav">
         <a class="nav-link" href="./weekOne.html">Week 1</a>
         <a class="nav-link" href="./meidaQ.html">Media Queries</a>
-        <a class="nav-link" href="./javascript.html">Javascript</a>
+        <a class="nav-link" href="./javascript.html">JS: Timed Quiz</a>
+        <a class="nav-link" href="./javascriptToDo.html">To Do List App</a>
       </div>
     </div>
   </nav>
