Day 25: Fixed Footer on JS

--- a/javascriptToDo.html
+++ b/javascriptToDo.html
@@ -58,7 +58,7 @@
 
 
   <!-- Start Footer -->
-  <footer class="mb-0 mt-4">
+  <footer class="mb-0 fixed-bottom">
     <div class="container">
   
       <div class="row text-light text-center py-4 justify-content-center">
