Day 26: Media Queries

--- a/meidaQ.html
+++ b/meidaQ.html
@@ -27,12 +27,22 @@
     </div>
   </nav>
 
-  <!-- media queries -->
+  <!-- Start Media Queries -->
   <div class="myDiv"></div>
   
   <img class="mountains" src="https://images.unsplash.com/photo-1582702877108-546b84049d77?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="mountains at sunset">
   
   <div class="container"></div>
+  <!-- End Media Queries -->
+
+  <hr>
+
+  <!-- Responsive Columns Without Bootstrap -->
+  <h1>Responsive Columns Without Bootstrap</h1>
+  <div class="one-third"></div>
+  <div class="one-third"></div>
+  <div class="one-third"></div>
+  <!-- End Responsive Columns Without Bootstrap -->
 
   <!-- footers -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
