Day 26: Added new link to nav

--- a/weekOne.html
+++ b/weekOne.html
@@ -26,6 +26,7 @@
           <a class="nav-link" href="./meidaQ.html">Media Queries</a>
           <a class="nav-link" href="./javascript.html">JS: Timed Quiz</a>
           <a class="nav-link" href="./javascriptToDo.html">To Do List App</a>
+          <a class="nav-link" href="./clientSideStorage.html">Client Side Storage</a>
         </div>
       </div>
     </nav>
