--- a/clientSideStorage.html
+++ b/clientSideStorage.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To Do List</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <!-- Style CSS -->
-  <link rel="stylesheet" href="./assets/css/index.css">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
-  <!-- Font Awesome (used for icons)-->
-  <script src="https://kit.fontawesome.com/bc8806cb40.js" crossorigin="anonymous"></script>
+  <title>Client Side Storage</title>
+<!-- Bootstrap 4.5 CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+  integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<!-- Style CSS -->
+<link rel="stylesheet" href="./assets/css/index.css">
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
+<!-- Font Awesome (used for icons)-->
+<script src="https://kit.fontawesome.com/bc8806cb40.js" crossorigin="anonymous"></script>
 </head>
-<body>
 
+<body>
   <!-- Start Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="./index.html">100 Days of Code</a>
@@ -33,45 +34,6 @@
     </div>
   </nav>
   <!-- End Navbar -->
-
-  <!-- To Do List Application -->
-  <div class="container">
-
-    <!-- Start Main Page Title -->
-    <div class="col-12 text-center mt-5 mb-5">
-      <h1 class="pt-4 pb-3">To Do List Application</h1>
-      <div class="border-top border-primary w-25 mx-auto"></div>
-    </div>
-    <!-- Main Page Title -->
-    
-    <!-- Description of JS To Do List -->
-    <div class="row">
-      <p>
-        This is a basic 'To-Do List Application' built using Javascript and Bootstrap. 
-      </p>
-    </div>
-    <!-- End Description JS To Do List -->
-
-    <!-- Row For Form -->
-    <div class="row">
-      <form>
-        <div class="form-group">
-          <label for="item"></label>
-          <input class="form-control" type="text" name="item" id="item">
-        </div>
-        <p>
-          <button class="btn btn-primary" id="addItem">Add Item</button>
-        </p>
-      </form>
-    </div>
-
-    <!-- Row For List Items -->
-    <div class="row">
-      <ul class="list-group" id="items"></ul>
-    </div>
-  </div>
-  <!-- End of To List Application -->
-
 
   <!-- Start Footer -->
   <footer class="mb-0 mt-5">
@@ -106,15 +68,16 @@
   
       <div class="row text-light text-center justify-content-center">
         <div class="col-sm-10 col-md-8 col-lg-6">
-          <p>&copy; <a href="#" target="_blank">www.portfolio.com</a></p>
+          <p>&copy; <a href="https://erikapaige.github.io/erikaPaigeHandleyPortfolio/index.html"
+              target="_blank">www.ephandley.com</a></p>
         </div>
       </div>
   
     </div>
   </footer>
   <!-- End Footer -->
-
-
+  
+  
   <!-- Start Footer Script Source Files -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -124,9 +87,6 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <!-- Font Awesome -->
   <script src="js/all.min.js"></script>
-  <!-- Script Tag for Javascript -->
-  <script src="js/javascriptToDo.js"></script>
-
-
+  
 </body>
 </html>
