Day 27: Fixed spacing on 'to do list' buttons

--- a/javascriptToDo.html
+++ b/javascriptToDo.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <!-- Style CSS -->
-  <link rel="stylesheet" href="./assets/css/index.css">
+  <link rel="stylesheet" href="./assets/css/javascriptToDo.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
   <!-- Font Awesome (used for icons)-->
@@ -37,12 +37,12 @@
   <!-- To Do List Application -->
   <div class="container">
 
-    <!-- Start Main Page Title -->
+    <!-- Start Main Title -->
     <div class="col-12 text-center mt-5 mb-5">
       <h1 class="pt-4 pb-3">To Do List Application</h1>
       <div class="border-top border-primary w-25 mx-auto"></div>
     </div>
-    <!-- Main Page Title -->
+    <!-- End Main Title -->
     
     <!-- Description of JS To Do List -->
     <div class="row">
@@ -106,7 +106,7 @@
   
       <div class="row text-light text-center justify-content-center">
         <div class="col-sm-10 col-md-8 col-lg-6">
-          <p>&copy; <a href="#" target="_blank">www.portfolio.com</a></p>
+          <p>&copy; <a href="#" target="_blank">www.ephportfolio.com</a></p>
         </div>
       </div>
   
