--- a/javascriptToDo.html
+++ b/javascriptToDo.html
@@ -39,37 +39,53 @@
 
     <!-- Start Main Title -->
     <div class="col-12 text-center mt-5 mb-5">
-      <h1 class="pt-4 pb-3">To Do List Application</h1>
+      <h1 class="pt-4">To Do List Application</h1>
+      <p>
+        This is a basic 'To-Do List Application' built using Javascript and Bootstrap.
+      </p>
       <div class="border-top border-primary w-25 mx-auto"></div>
     </div>
     <!-- End Main Title -->
     
-    <!-- Description of JS To Do List -->
-    <div class="row">
-      <p>
-        This is a basic 'To-Do List Application' built using Javascript and Bootstrap. 
-      </p>
+    <!-- Start Form Body -->
+    <div class="row mb-5">
+      <form class="form-inline">
+        <div class="form-group">
+          <label for="name"></label>
+          <input class="form-control" type="text" name="name" id="name" placeholder="Enter your name..." >
+        </div>
+        <button class="btn btn-primary ml-2" id="submit">Submit</button>
+      </form>
     </div>
-    <!-- End Description JS To Do List -->
+    <!-- End Form Body -->
+      
+    <!-- Start Row from Name form, using Local Storage  -->
+    <div class="row mb-2 mt-5">
+      <h3 id="greeting"></h3>
+    </div>
+    <!-- End Row from Name form, using Local Storage   -->
 
-    <!-- Row For Form -->
-    <div class="row">
-      <form>
+    <!-- Start Row For Form -->
+    <div class="row mb-2">
+      <form class="form-inline">
         <div class="form-group">
           <label for="item"></label>
           <input class="form-control" type="text" name="item" id="item">
         </div>
-        <p>
-          <button class="btn btn-primary" id="addItem">Add Item</button>
-        </p>
+        <button class="btn btn-primary ml-2" id="addItem">Add Item</button>
       </form>
     </div>
+    <!-- End Row For Form -->
 
-    <!-- Row For List Items -->
+    <!-- Start Row For List Items -->
     <div class="row">
       <ul class="list-group" id="items"></ul>
     </div>
+    <!-- End Row For List Items -->
+
   </div>
+
+  
   <!-- End of To List Application -->
 
 
