Day 27: Added Button to remove item from local storage

--- a/javascriptToDo.html
+++ b/javascriptToDo.html
@@ -54,7 +54,7 @@
           <label for="name"></label>
           <input class="form-control" type="text" name="name" id="name" placeholder="Enter your name..." >
         </div>
-        <button class="btn btn-primary ml-2" id="submit">Submit</button>
+        <button class="btn btn-primary ml-2" id="submit">Add Your Name to the 'To List'</button>
       </form>
     </div>
     <!-- End Form Body -->
